--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -9,8 +9,8 @@ footer
 		content: ''
 		position: absolute
 		z-index: -1
-		width: 1383px
-		height: 871px
+		width: 1083px
+		height: 500px
 		background: url('../img/footer-figure.svg') no-repeat center
 		background-size: 100%
 		left: 0
@@ -59,6 +59,7 @@ footer
 		height: 100%
 		border-radius: 20px
 		z-index: -1
+		object-fit: cover
 	.svg-icon
 		fill: #fff
 		width: 15px
@@ -131,3 +132,38 @@ footer
 
 .copyright
 	margin: 0 37px 0 0	
+
+// modal
+.modal-content
+	background: #13285F
+	border: none
+	.form
+		max-width: 300px
+		margin: 0 auto
+
+.modal-header
+	border: none
+	padding: 20px
+	.btn-close
+		padding: 0
+		position: absolute
+		z-index: 1
+		cursor: pointer
+		opacity: 1
+		top: 25px
+		right: 20px
+		width: 20px
+		height: 20px
+		color: #fff
+		margin: 0
+		filter: invert(1)
+
+.modal-body
+	padding: 20px		
+
+.modal-title
+	text-align: center
+	text-transform: uppercase
+	width: 100%
+	
+				
