--- a/sass/main.sass
+++ b/sass/main.sass
@@ -42,6 +42,7 @@
 	z-index: 1
 	width: 1391px
 	margin: 36px -380px -25px -225px
+	@include d-flex
 
 .home-contacts
 	position: absolute
@@ -141,6 +142,7 @@
 	margin: 0 0 68px
 	img
 		border-radius: 20px
+		width: 100%
 
 .technology-wrapper
 	width: 100%
@@ -458,7 +460,7 @@
 		content: ''
 		position: absolute
 		right: -102px
-		top: -60px
+		top: -44px
 		background: linear-gradient(270deg, #13285F 24.03%, rgba(19, 40, 95, 0) 100%)
 		width: 574px
 		height: 466px
@@ -529,7 +531,6 @@
 
 // callback-sales
 .callback-sales
-	// margin: 0 0 166px
 	h2
 		font-weight: normal
 		strong
