--- a/sass/media.sass
+++ b/sass/media.sass
@@ -1,16 +1,663 @@
-/*==========  Desktop First  ==========*/
+/*==========	Desktop First	==========*/
 
 /* Large Devices, Wide Screens */
+@media only screen and (max-width: 1500px)
+	.home-contacts
+		right: 150px
+
+	.home-image
+		width: 1000px
+		margin: 36px -380px 0 -165px
+
+	.timer-sale-box
+		width: 465px
+
+	.footer-box
+		min-width: auto
+		margin: 0 50px 0 0
+
+@media only screen and (max-width: 1430px)
+	.advantages-col
+		width: 370px
+		&:last-child
+			width: 401px
+
+@media only screen and (max-width: 1400px)
+	.advantages
+		margin: 60px 0 90px
+
+	.advantages-wrapper
+		margin: 30px 0 0
+
+	.advantages-col
+		width: calc(50% - 15px)
+		&:last-child
+			width: calc(50% - 15px)
+
+	.home-image
+		width: calc(100% - 680px)
+		margin: 0
+
+	.home-contacts
+		right: 0
+
+	h2
+		font-size: 60px
+
+	.technology-wrapper
+		margin: 30px 0 0
+
+	.about-advantages-box
+		margin: 0 30px 30px 0
+		&:last-child
+			margin: 0 0 30px
+
+	.about-history-box
+		font-size: 24px
+		margin: 0 0 40px
+		h3
+			font-size: 70px
+
+	.about
+		h2
+			font-size: 120px
+
+	.history-company
+		.subtitle
+			font-size: 50px
+
+	.manufacturers-wrapper
+		max-width: none
+
+	.reviews h2::before
+		top: 100%
+
+	.reviews h2 span
+		font-size: 120px
+
+	.timer-sale
+		margin: 40px auto
+
+	.callback-sales
+		margin: 0 0 50px
+		.form
+			h3
+				text-align: center
+
+	.sale-description
+		text-align: center
+
+	.callback-sales-wrapper
+		flex-direction: column
+		align-items: center
+
+	.link-phone
+		font-size: 30px
+
+	footer
+		.logo
+			margin: 0 20px 0 0
+		.description-company
+			margin: 0 20px 0 0
+			max-width: 260px
+
+	.footer-wrapper
+		margin: 30px 0 0
+
+@media only screen and (max-width: 1300px)
+	.about-advantages-box
+		width: 100%
+		max-width: none
+		margin: 0 0 30px
+		&:first-child, &:nth-child(2), &:last-child
+			max-width: none
+		&:last-child
+			margin: 0 0 30px
+		br
+			display: none
+
+	.reviews h2::before
+		display: none
+
+	.reviews-slider, .steering-slider
+		width: calc(100% + 15px)
+		margin: 30px 0 0
+
+	.link-developer
+		margin: 56px 0 0 30px
 @media only screen and (max-width: 1200px)
+	.header-contacts
+		margin: 0 20px 0 0
+
+	.btn-burger
+		margin: 0 0 0 20px
+
+	header
+		padding: 20px 0
+
+	.home-image
+		width: 100%
+		margin: 20px auto 0
+
+	.home-content
+		max-width: none
+		margin: 0 -15px
+		width: calc(100% + 30px)
+		padding: 150px 50px 50px
+		border-radius: 0
+
+	h1
+		text-align: center
+		max-width: none
+		font-size: 46px
+
+	h2
+		font-size: 50px
+
+	.home
+		.subtitle
+			text-align: center
+		.form
+			margin: 0 auto
+
+	.home-advantages
+		justify-content: center
+		margin: 30px 0
+
+	.home-advantages-item
+		margin: 0 20px
+
+	.home-order
+		h3
+			max-width: none
+			text-align: center
+
+	.home-contacts
+		bottom: 50px
+
+	.technology
+		margin: 0 0 100px
+
+	.technology-wrapper
+		flex-wrap: wrap
+
+	.technology-box
+		width: 100%
+		padding: 0 0 20px
+		margin: 0 0 20px
+		border: none
+		border-bottom: 1px solid #EC6E00
+		&:nth-child(2), &:last-child
+			max-width: none
+			width: 100%
+		&:last-child
+			margin: 0
+
+	.technology-content
+		margin: 0 0 20px
+		max-width: none
+
+	.technology-image
+		width: 100%
+		max-width: none
+		margin: 0
+
+	.possibilities-image::before
+		width: 614px
+		height: 233px
+
+	.about-history-box
+		h3
+			font-size: 70px
+
+	.about::before
+		width: 686px
+		height: 678px
+
+	.benefit-content
+		margin: 0
+
+	.reviews
+		margin: 150px 0
+
+	.reviews-box
+		padding: 30px
+
+	.slider-nav
+		margin: 20px auto 0
+		justify-content: center
+
+	.reviews-box2
+		width: 600px
+
+	.reviews-box3
+		width: 650px
+
+	.steering
+		margin: 0 0 130px
+
+	.link-map
+		margin: 20px 0 0
+
+	.footer-top
+		padding: 30px 0 0
+
+	footer
+		padding: 0 0 30px
+		.btn
+			margin: 0 auto
+		.header-contacts
+			margin: 0
+
+	.footer-bottom
+		margin: 30px 0 0
+
+	.footer-contact
+		margin: 0
+
+	.link-developer
+		margin: 56px 0 0 auto
+
+	.address
+		margin: 0 0 15px
 
 @media only screen and (max-width: 992px)
+	header
+		.description-company
+			display: none
+		.logo
+			margin: 0 auto 0 0
+
+	.possibilities
+		margin: 0 0 80px
+
+	.possibilities-image
+		min-width: auto
+		margin: 20px auto 0
+		&::before
+			top: 50%
+			left: 50%
+			transform: translate(-50%,-50%)
+
+	.possibilities-box
+		width: 100%
+		margin: 0
+
+	.call-wrapper
+		margin: 0 auto 40px
+		padding: 20px 30px
+		.subtitle
+			padding: 0
+			width: 100%
+			text-align: center
+		&__text
+			width: 100%
+			border: none
+			border-top: 1px solid #fff
+			padding: 20px 0 0
+			margin: 20px 0 0
+			max-width: none
+			text-align: center
+		.btn
+			margin: 10px auto 0
+
+	.abot
+		h2
+			font-size: 80px
+
+	.about-history-box
+		h3
+			font-size: 50px
+
+	.history-company
+		text-align: center
+		padding: 0 0 30px
+		margin: 0 0 40px
+		&::before
+			width: 100%
+		.subtitle
+			max-width: none
+			margin: 0 auto
+			font-size: 40px
+
+	.benefit
+		margin: 60px 0 100px
+
+	.benefit-wrapper
+		margin: 30px 0 0
+		flex-direction: column
+
+	.benefit-advantages
+		max-width: none
+
+	.statistic
+		width: 100%
+		margin: 30px 0 0
+
+	.benefit-image
+		margin: 30px auto 0
+
+	.manufacturers-box
+		max-width: 49%
+		width: 100%
+		margin: 0 0 30px
+		&:last-child
+			margin: 0 0 30px
+		h4
+			font-size: 26px
+			br
+				display: none
+
+	.manufacturers-logos
+		justify-content: space-around
+
+	.reviews
+		margin: 120px 0
+		h2
+			span
+				font-size: 100px
+
+	.reviews-slider::before, .steering-slider::before
+		height: 100%
+		width: 300px
+		right: 0
+		top: 0
+		bottom: 0
+
+	.reviews-box
+		width: 400px
+
+	.reviews-box2
+		width: 500px
+
+	.reviews-box3
+		width: 600px
+
+	.slick-arrow
+		width: 25px
+		height: 60px
+
+	.slider-nav .slick-next
+		margin: 0 0 0 30px
+
+	.steering::before
+		width: 800px
+		height: 900px
+
+	.steering
+		margin: 0 0 100px
+
+	.footer-box
+		width: 50%
+		margin: 0 0 20px
+		font-size: 18px
+
+	.link-developer
+		width: 50%
+		margin: 46px 0 0 0
+
+	.footer-contact
+		width: 100%
+		justify-content: center
+		margin: 20px 0 0
+
+	footer .btn
+		width: 100%
+		order: 1
+		margin: 20px auto 0
+
+	footer .description-company
+		max-width: none
+		width: 50%
+
+	.address
+		margin: 0
+
+	.link-phone
+		margin: 0
 
 @media only screen and (max-width: 768px)
+	.btn
+		padding: 10px 20px
+		height: 40px
+		font-size: 16px
+
+	.btn-burger
+		width: 30px
+		height: 28px
+
+	body
+		font-size: 18px
+
+	header
+		.logo
+			max-width: 80px
+		.phone
+			font-size: 18px
+
+	h1
+		font-size: 36px
+
+	.subtitle
+		font-size: 30px
+
+	h2
+		font-size: 40px
+
+	.home-content
+		padding: 120px 30px 30px
+
+	.home .subtitle
+		font-size: 30px
+
+	.home-order h3
+		font-size: 24px
+
+	.home-advantages-item
+		margin: 0 0 20px
+		width: 100%
+
+	.home-advantages
+		flex-direction: column
+		align-items: center
+		max-width: 250px
+		margin: 30px auto 10px
+
+	.tel
+		font-size: 34px
+
+	.home-contacts
+		bottom: 0
+
+	.advantages
+		margin: 60px 0
+
+	.advantages-col
+		width: 100%
+		&:last-child
+			width: 100%
+
+	.advantages-box
+		margin: 0 0 20px
+		padding: 20px
+		line-height: normal
+		&:last-child
+			margin: 0 0 20px
+		&__icon
+			width: 50px
+			height: 50px
+			min-width: 50px
+			margin: 0 20px 0 0
+
+	.technology
+		margin: 0 0 60px
+
+	.abot
+		h2
+			font-size: 60px
+
+	.history-company
+		.subtitle
+			font-size: 30px
+
+	.about-history-box
+		h3
+			font-size: 40px
+
+	.benefit-advantages
+		font-size: 26px
 
 @media only screen and (max-width: 576px)
+	header
+		.btn
+			display: none
+		.header-contacts
+			margin: 0
+
+	.tel
+		font-size: 26px
+
+	body
+		font-size: 16px
+
+	h1
+		font-size: 24px
+
+	h2
+		font-size: 30px
+
+	.subtitle, .home .subtitle, .home-order h3
+		font-size: 20px
+
+	.possibilities
+		margin: 0 0 60px
+
+	.possibilities-box
+		padding: 20px
+
+	.call-wrapper
+		.btn
+			padding: 10px 20px
+			width: 100%
+
+	.about
+		h2
+			font-size: 70px
+
+	.about-advantages-box__icon
+		width: 50px
+		height: 50px
+		min-width: 50px
+		margin: 0 20px 0 0
+
+	.about-history-box
+		font-size: 20px
+		margin: 0 0 30px
+		h3
+			font-size: 24px
+
+	.history-company
+		.subtitle
+			font-size: 24px
+
+	.benefit-advantages
+		font-size: 22px
+		padding: 30px
+
+	.benefit
+		margin: 60px 0
+		h2
+			margin: 0 0 20px
+
+	.statistic
+		padding: 20px
+
+	.manufacturers-box
+		h4
+			font-size: 22px
+
+	.manufacturers-logos__item
+		width: 50%
+		margin: 0 0 20px
+		padding: 0 10px
+
+	.reviews
+		margin: 60px 0
+		h2
+			span
+				font-size: 60px
+				margin: 0 20px 0 0
+
+	.reviews-box, .reviews-box2, .reviews-box3, .steering-box
+		width: 100%
+
+	.reviews-slider::before, .steering-slider::before
+		display: none
+
+	.steering
+		margin: 0 0 70px
+
+	.timer-sale
+		width: 100%
+
+	.timer-sale-box
+		flex-direction: column
+		align-items: center
+		padding: 20px
+		width: 100%
+		p
+			font-size: 24px
+			width: 100%
+			margin: 0 auto 20px
+			text-align: center
+
+	.footer-box
+		width: 100%
+
+	.link-developer
+		margin: 20px 0 0
+		width: 100%
+
+	.link-phone
+		line-height: normal
+		font-size: 24px
+
+	.address
+		margin: 0 0 10px
+
+	footer
+		.logo
+			margin: 0 auto
+		.description-company
+			width: 100%
+			margin: 10px auto 0
+			text-align: center
 
 @media only screen and (max-width: 480px)
+	.about
+		h2
+			font-size: 50px
+
+	.reviews
+		h2
+			flex-wrap: wrap
+			span
+				width: 100%
+				margin: 0 0 10px
 
 @media only screen and (max-width: 420px)
 
-@media only screen and (max-width: 370px)	
+@media only screen and (max-width: 370px)
+	header
+		.header-contacts
+			font-size: 14px
+		.logo
+			max-width: 60px
+
+	.btn-burger
+		width: 26px
+		height: 20px
+		margin: 0 0 0 10px
+
+	.messenger-link
+		margin: 0 4px 0 0
