--- a/css/footer.css
+++ b/css/footer.css
@@ -8,8 +8,8 @@ footer::before {
   content: "";
   position: absolute;
   z-index: -1;
-  width: 1383px;
-  height: 871px;
+  width: 1083px;
+  height: 500px;
   background: url("../img/footer-figure.svg") no-repeat center;
   background-size: 100%;
   left: 0;
@@ -80,6 +80,8 @@ footer .phone {
   height: 100%;
   border-radius: 20px;
   z-index: -1;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .link-map .svg-icon {
   fill: #fff;
@@ -182,4 +184,43 @@ footer .phone {
 
 .copyright {
   margin: 0 37px 0 0;
+}
+
+.modal-content {
+  background: #13285F;
+  border: none;
+}
+.modal-content .form {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.modal-header {
+  border: none;
+  padding: 20px;
+}
+.modal-header .btn-close {
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  cursor: pointer;
+  opacity: 1;
+  top: 25px;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+  margin: 0;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-title {
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
 }
