--- a/css/header.css
+++ b/css/header.css
@@ -72,3 +72,78 @@ header {
 .messenger-link {
   margin: 0 7px 0 0;
 }
+
+.mobile-menu {
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  overflow-y: auto;
+  padding: 30px 20px;
+  background: #13285F;
+  display: none;
+  -webkit-filter: drop-shadow(50px 50px 75px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(50px 50px 75px rgba(0, 0, 0, 0.25));
+}
+.mobile-menu__close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.mobile-menu__close::before, .mobile-menu__close:after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  background: #fff;
+  border-radius: 2px;
+  left: 10px;
+  top: 0;
+}
+.mobile-menu__close::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.mobile-menu__close::after {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+.mobile-menu .logo {
+  margin: 0 auto;
+}
+.mobile-menu .phone {
+  font-size: 23px;
+}
+.mobile-menu .header-contacts {
+  margin: 0 0 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.mobile-menu .btn {
+  width: 100%;
+}
+
+.menu {
+  text-transform: uppercase;
+  margin: 30px 0;
+  text-align: center;
+}
+.menu li {
+  margin: 0 0 20px;
+}
+.menu li:last-child {
+  margin: 0;
+}
+.menu li a {
+  width: 100%;
+  color: #fff;
+}
+.menu li a:hover {
+  color: #EC6E00;
+}
