--- a/sass/header.sass
+++ b/sass/header.sass
@@ -45,3 +45,60 @@ header
 
 .messenger-link
 	margin: 0 7px 0 0							
+
+.mobile-menu
+	position: fixed
+	z-index: 10
+	right: 0
+	top: 0
+	width: 300px
+	height: 100%
+	overflow-y: auto
+	padding: 30px 20px
+	background: #13285F	
+	display: none
+	filter: drop-shadow(50px 50px 75px rgba(0, 0, 0, 0.25))
+	&__close
+		position: absolute
+		right: 20px
+		top: 20px
+		width: 20px
+		height: 20px
+		cursor: pointer
+		&::before, &:after
+			content: ''
+			position: absolute
+			width: 2px
+			height: 100%
+			background: #fff
+			border-radius: 2px
+			left: 10px
+			top: 0
+		&::before
+			transform: rotate(45deg)
+		&::after
+			transform: rotate(135deg)		
+	.logo
+		margin: 0 auto
+	.phone
+		font-size: 23px
+	.header-contacts
+		margin: 0 0 30px	
+		justify-content: center
+	.btn
+		width: 100%	
+
+.menu
+	text-transform: uppercase
+	margin: 30px 0
+	text-align: center
+	li
+		margin: 0 0 20px
+		&:last-child
+			margin: 0
+		a
+			width: 100%
+			color: #fff
+			&:hover
+				color: $accent				
+			
