--- a/sass/main.sass
+++ b/sass/main.sass
@@ -18,6 +18,7 @@
 		filter: blur(17.5px)
 		background: linear-gradient(360deg, #13285F 2.36%, rgba(19, 40, 95, 0) 42.77%)
 		transform: matrix(-1, 0, 0, 1, 0, 0)
+		will-change: transform
 	.subtitle
 		font-size: 38px
 
@@ -189,6 +190,7 @@
 		top: -53px
 		left: 77px
 		filter: blur(232.5px)
+		will-change: transform
 		background: #076AB4
 		border-radius: 465px
 
@@ -200,6 +202,10 @@
 	width: 100%
 	background: linear-gradient(116.4deg, #19357F 2.27%, rgba(25, 53, 127, 0) 98.01%)
 	filter: drop-shadow(50px 50px 75px rgba(0, 0, 0, 0.25))
+	-webkit-backface-visibility: hidden
+	-moz-backface-visibility: hidden
+	-webkit-transform: translate3d(0, 0, 0)
+	-moz-transform: translate3d(0, 0, 0)
 	border-radius: 20px
 	padding: 30px
 	display: flex
@@ -258,6 +264,7 @@
 		position: absolute
 		background: #076AB4
 		filter: blur(232.5px)
+		will-change: transform
 		width: 886px
 		height: 878px
 		z-index: -1
@@ -268,6 +275,7 @@
 		z-index: -1
 		background: #09122B
 		filter: blur(232.5px)
+		will-change: transform
 		width: 886px
 		height: 878px
 		border-radius: 465px
@@ -495,6 +503,7 @@
 		left: -793px
 		background: #076AB4
 		filter: blur(232.5px)
+		will-change: transform
 		z-index: -1
 		width: 1117px
 		height: 1290px
@@ -541,7 +550,7 @@
 	&__img
 		min-width: 481px
 		@include d-flex
-		margin: -76px -170px -153px 0				
+		margin: -76px -170px -153px 0
 
 .callback-sales-wrapper
 	width: 100%
