--- a/sass/media.sass
+++ b/sass/media.sass
@@ -16,6 +16,10 @@
 		min-width: auto
 		margin: 0 50px 0 0
 
+	.reviews h2::before
+		bottom: 40px
+		left: calc(100% - 60px)
+
 @media only screen and (max-width: 1430px)
 	.advantages-col
 		width: 370px
